# StreamLine

./: .gitignore  Cargo.toml  README.md  security.txt
benchmark/: benchmark.py
data/: keys.json  rooms.json  users.json
data/logs/rooms/: tester.json
data/logs/users/: jeff.json
data/vault/users/: bryan.json
docs/: commands.md
src/: client.rs  commands.rs  crypto.rs  server.rs  test.rs  types.rs  utils.rs
src/backend/: command_utils.rs  mod.rs  parser.rs
src/backend/dispatcher/: guest.rs  inroom.rs  loggedin.rs  mod.rs
src/backend/dispatcher/inroom/: messaging.rs  moderation.rs  superuser.rs  superuser_roles.rs  user.rs
src/backend/dispatcher/loggedin/: account.rs  ignore.rs  rooms.rs
src/commands/: command_utils.rs  dispatcher.rs  mod.rs  parser.rs  utils.rs
src/commands/dispatcher/: guest.rs  inroom.rs  loggedin.rs  mod.rs
src/data/: mod.rs  room.rs
src/frontend/: app.rs  mod.rs  network.rs  ui.rs
src/shared/: crypto.rs  mod.rs  types.rs  utils.rs
src/state/: default.rs  manager.rs  mod.rs  storage.rs  types.rs
