[package]
name = "streamline"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
chrono = "0.4.41"
aes = { version = "0.8", features = ["block-cipher"] }
block-modes = "0.8.1"
block-padding = "0.2"
base64 = "0.22"
rand = "0.8"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
