[package]
name = "streamline"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
chrono = "0.4.41"
regex = "1"
rand = "0.8"
base64 = "0.21"
rsa = "0.9"
pkcs8 = "0.10"
ratatui = "0.30.0"
crossterm = "0.29.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
